--- a/LeaveManageAPP/appsettings.json
+++ b/LeaveManageAPP/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-Q8N32B2;Initial Catalog=LeaveManage;Integrated Security=True"
+    "DefaultConnection": "Data Source=DESKTOP-8OO7BLF;Initial Catalog=LeaveManage;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
